--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -23,3 +23,14 @@ body {
     font-size: 62.5%;
   }
 }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  min-height: 100vh;
+  height: 100%;
+  width: 100%;
+}
